--- a/account.html
+++ b/account.html
@@ -1,4 +1,5 @@
 
+
 <!DOCTYPE html>
 <html lang="en" >
 
@@ -29,10 +30,74 @@
 </head>
 
 <body translate="no" >
+  <div class="uk-section">
+  <div id="app" class="uk-container">
+    <section v-if="view === 'build'">
+      <h1>It's Secret Santa Time!</h1>
+      
+      <div v-if="position === 1">
+        <h3>1. Enter everyone's name below, each on their own line.</h3>
+        <p>
+          If you want to prevent two people from getting each other (eg. if they are a couple), put the same number in front of their name.
+          For example, if you don't want Francis or Amy to get each other, 
+            you could enter "1Francis" and "1Amy".
+          If you have more groups, increase the number eg. "2Paul" and "2Doug".
+          Right now, groups can only be two.
+        </p>
+        <textarea v-model="namesSource"
+                  class="uk-textarea"
+                  :class="{ 'uk-form-danger': error }"
+                  @input="clear"
+                  cols="30" rows="10"></textarea>
+        <p v-if="error" class="uk-text-danger">
+          <span v-if="error === 'duplicates'">There are duplicates.</span>
+          <span v-if="error === 'too-few'">This list of names can't be processed.</span>
+        </p>
+        <p>
+          <button @click="buildResults(1)" class="uk-button uk-button-primary" :disabled="error">
+            Generate Results
+          </button>
+        </p>
+      </div>
+
+      <div v-if="position === 2">
+        <h3>2. Send each person their link.</h3>
+        <table class="uk-table uk-table-striped">
+          <thead>
+            <tr>
+              <th>Santa</th>
+              <th v-if="showMatches">Recipient</th>
+              <th>Link</th>
+            </tr>
+          </thead>
+          <tbody>
+            <tr v-for="name in names" style="overflow-x: auto;">
+              <td><small>{{ name.replace(/^\d+/, '') }}</small></td>
+              <td v-if="showMatches"><small>{{ results[name].name }}</small></td>
+              <td>
+                <small>
+                  <a :href="results[name].link" v-if="results[name]" target="_blank">
+                    {{ results[name].link }}
+                  </a>
+                </small>
+              </td>
+            </tr>
+          </tbody>
+        </table>
+        <p class="uk-text-danger">These links cannot be recreated.</p>
+        <button @click="showMatches = !showMatches" class="uk-button uk-button-secondary">
+          <span v-if="showMatches">Hide Matches</span>
+          <span v-else>See Matches</span>
+        </button>
+        <button @click="navigate(-1)" class="uk-button uk-button-danger" :disabled="error">
+          Regenerate
+        </button>
+      </div>
+    </section>
 
     <section v-if="view === 'read'">
       <img width="500" height="300" data-src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/111863/funny-fresh-prince-santa-merry-christmas-gif.gif" uk-img />
-      <h1>Greetings 1, {{ person }}!</h1>
+      <h1>Բարև, {{ person }}!</h1>
       <div v-if="promise">
         <p>You are Secret Santa for <strong>{{ recipient }}</strong>.</p>
       </div>
@@ -49,7 +114,165 @@
 <script src='https://cdnjs.cloudflare.com/ajax/libs/crypto-js/3.1.9-1/crypto-js.min.js'></script>
 <script src='https://cdnjs.cloudflare.com/ajax/libs/uikit/3.0.0-rc.25/js/uikit.min.js'></script>
 <script src='https://cdnjs.cloudflare.com/ajax/libs/uikit/3.0.0-rc.25/js/uikit-icons.min.js'></script>
-     
+      <script id="rendered-js" >
+console.clear();
+let params = {};
+const args = window.location.search.replace(/^\?/, '').split('&');
+const PASSPHRASE = 'SECRET SANTA';
+
+const position = read('position');
+const namesSource = read('namesSource');
+const results = read('results');
+
+args.forEach(arg => {
+  let [key, val] = arg.split('=');
+  if (key === 'd') {
+    try {
+      let [person, recipient] = decrypt(val).split(',');
+      params.person = person;
+      params.recipient = recipient;
+    } catch (e) {
+      alert('Something went wrong');
+    }
+  }
+});
+
+new Vue({
+  el: '#app',
+  computed: {
+    names() {
+      return this.namesSource.
+      replace(/  +/, ' ').
+      replace(/\n\n+/, '\n').
+      replace(/\n$/, '').
+      split('\n').
+      map(this.cleanName);
+    },
+    error() {
+      let error = null;
+      if (this.hasTooFew()) error = 'too-few';else
+      if (this.hasDuplicates()) error = 'duplicates';
+      return error;
+    } },
+
+  data() {
+    return {
+      view: params.person && params.recipient ? 'read' : 'build',
+      namesSource: namesSource || '',
+      showMatches: false,
+      results: results || {},
+      position: position || 1,
+      person: params.person,
+      recipient: params.recipient,
+      promise: false };
+
+  },
+  methods: {
+    clear() {
+      this.results = {};
+    },
+    cleanName(name) {
+      return name.replace(/^ +/, '').
+      replace(/ +$/, '').
+      replace(/[^\da-zA-Z ]/g, '');
+    },
+    navigate(direction) {
+      this.position += direction;
+      save('position', this.position);
+      save('namesSource', this.namesSource);
+      save('results', this.results);
+    },
+    getGroups() {
+      let obj = {};
+      let arrs = [];
+      this.names.forEach(name => {
+        let group = name.match(/^\d+/);
+        if (group) name = name.replace(group, '');else
+        group = '_';
+        obj[group] = obj[group] || [];
+        obj[group].push(name);
+        this.shuffle(obj[group]);
+      });
+      for (let group in obj) {
+        let g = obj[group];
+        for (let i = 0; i < g.length; i++) {
+          let idx = i % 2;
+          arrs[idx] = arrs[idx] || [];
+          arrs[idx].push(g[i]);
+        }
+      }
+      let count = arrs[0].length;
+      let ints = [];
+      for (let i = 0; i < count; i++) ints.push(i);
+      this.shuffle(ints);
+      let res = [];
+      arrs.forEach(arr => {
+        let tmp = [];
+        ints.forEach((int, i) => {
+          if (arr[int]) tmp[i] = arr[int];
+        });
+        res.push(tmp.filter(el => !!el));
+      });
+      return res[0].concat(res[1]);
+    },
+    buildResults() {
+      this.results = {};
+      const arr = this.getGroups();
+      this.names.forEach(name => {
+        let stripName = name.replace(/^\d+/, '');
+        let idx = (arr.indexOf(stripName) + 1) % arr.length;
+        this.results[name] = { name: arr[idx], link: this.buildLink(stripName, arr[idx]) };
+      });
+      this.navigate(1);
+    },
+    buildLink(person, recipient) {
+      const data = encrypt([person, recipient].join(','));
+      const url = 'https://codepen.io/jakealbaugh/debug/Pxvzwv/';
+      return `${url}?d=${data}`;
+    },
+    hasDuplicates() {
+      let arr = this.names.map(n => n.toLowerCase());
+      var counts = [];
+      for (let i = 0; i <= arr.length; i++) {
+        if (counts[arr[i]] === undefined) counts[arr[i]] = 1;else
+        return true;
+      }
+      return false;
+    },
+    hasTooFew() {
+      return this.names.length < 3;
+    },
+    shuffle(a) {
+      for (let i = a.length - 1; i > 0; i--) {
+        const j = Math.floor(Math.random() * (i + 1));
+        [a[i], a[j]] = [a[j], a[i]];
+      }
+      return a;
+    } } });
+
+
+
+function encrypt(string) {
+  return window.encodeURIComponent(CryptoJS.AES.encrypt(string, PASSPHRASE));
+}
+
+function decrypt(string) {
+  string = window.decodeURIComponent(string);
+  return CryptoJS.AES.decrypt(string, PASSPHRASE).toString(CryptoJS.enc.Utf8);
+}
+
+function save(type, value) {
+  window.localStorage.setItem(type, JSON.stringify(value));
+}
+
+function read(type) {
+  let val = window.localStorage.getItem(type);
+  if (!val) return null;
+  return JSON.parse(val);
+}
+    </script>
+
+  
 
 </body>
 
