--- a/account.html
+++ b/account.html
@@ -192,7 +192,7 @@
     </section>
 
     <section v-if="view === 'read'">
-      <img width="500" height="300" data-src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/111863/funny-fresh-prince-santa-merry-christmas-gif.gif" uk-img />
+      <img width="500" height="300" data-src="https://i.pinimg.com/originals/eb/2a/8f/eb2a8f4ddfb50c23712a3cd0d5cc2a3a.gif" uk-img />
       <h1>Բարի Գալուստ, {{ person }}!</h1>
       <div v-if="promise">
         <p>Դու նվեր ես տալու <strong>{{ recipient }}</strong>ին։</p>
