--- a/account.html
+++ b/account.html
@@ -265,19 +265,19 @@
         <h2>Secret Summer countdown!</h2>
         <div class="countdown">
             <div class="container-day">
-                <h3 class="day">Time</h3>
+                <h3 class="day">0</h3>
                 <h3>Օր</h3>
             </div>
             <div class="container-hour">
-                <h3 class="hour">Time</h3>
+                <h3 class="hour">0</h3>
                 <h3>Ժամ</h3>
             </div>
             <div class="container-minute">
-                <h3 class="minute">Time</h3>
+                <h3 class="minute">0</h3>
                 <h3>Րոպե</h3>
             </div>
             <div class="container-second">
-                <h3 class="second">Time</h3>
+                <h3 class="second">0</h3>
                 <h3>Վրկ</h3>
             </div>
         </div>
