--- a/account.html
+++ b/account.html
@@ -463,7 +463,7 @@
 
     const countdown = () => {
                 const countDate = new Date('May 11, 2021 19:20:00').getTime()
-                const now = new Date().getTime()
+                const now = new Date()
                 const gap = countDate - now
 
                 const second = 1000
