--- a/account.html
+++ b/account.html
@@ -14,7 +14,7 @@
 
 
   <title>CodePen - Secret Santa Generator</title>
-  <audio src="music.mp3"></audio>
+  <audio src="https://youtu.be/AQ19FagdBMI?t=5"></audio>
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/5.0.0/normalize.min.css">
 
