--- a/account.html
+++ b/account.html
@@ -14,7 +14,6 @@
 
 
   <title>CodePen - Secret Santa Generator</title>
-  <audio src="https://youtu.be/AQ19FagdBMI?t=5" controls></audio>
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/5.0.0/normalize.min.css">
 
@@ -294,6 +293,10 @@
     <div class="line"></div>
   </div>
 </div>
+    
+<audio class="audio">
+  <source src="music.mp3" type="audio/mp3"> 
+</audio>
   
   <script src='https://cdnjs.cloudflare.com/ajax/libs/vue/2.5.17/vue.min.js'></script>
 <script src='https://cdnjs.cloudflare.com/ajax/libs/crypto-js/3.1.9-1/crypto-js.min.js'></script>
@@ -301,9 +304,11 @@
 <script src='https://cdnjs.cloudflare.com/ajax/libs/uikit/3.0.0-rc.25/js/uikit-icons.min.js'></script>
       <script id="rendered-js" >
         const loadWrapp = document.querySelector(".load-wrapp")
+        const audio = document.querySelector(".audio")
 
        window.addEventListener("load", function(){
         loadWrapp.parentElement.removeChild(loadWrapp)
+        audio.play()
        })
     
     console.clear();
