--- a/account.html
+++ b/account.html
@@ -246,7 +246,7 @@
       <img width="500" height="300" data-src="https://i.pinimg.com/originals/eb/2a/8f/eb2a8f4ddfb50c23712a3cd0d5cc2a3a.gif" uk-img />
       <h1>Բարի Գալուստ, {{ person }}!</h1>
       <div v-if="promise">
-        <p>Դու նվեր ես տալու <strong>{{ recipient }}ին</strong>։</p>
+        <p>Դու նվեր ես տալու <strong>{{ recipient }}-ին</strong>։</p>
       </div>
       <div v-else>
         <p>Սեղմիր ներքևի կոճակին, որպեսզի իմանաս, թե այս ամռանը ում ես նվեր տալու։</p>
